[gd_scene load_steps=5 format=3 uid="uid://cybxvuby8mtrw"]

[ext_resource type="Script" uid="uid://qaoe0v0k51wu" path="res://main/main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://4qs6esm05pc2" path="res://main/player.gd" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dfh3cad2ox17g" path="res://Scenes/Game/game.tscn" id="3_h2yge"]
[ext_resource type="StyleBox" uid="uid://bwqv3dgh5dyrn" path="res://clock_style_box_flat.tres" id="4_1bvp3"]

[node name="Main" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="Player1" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0xm2m")
color = Color(1, 0.466038, 0.496184, 1)
metadata/_custom_type_script = "uid://4qs6esm05pc2"

[node name="Player2" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0xm2m")
color = Color(0.358233, 0.535601, 0.966615, 1)
metadata/_custom_type_script = "uid://4qs6esm05pc2"

[node name="Player3" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0xm2m")
color = Color(0, 0.901982, 0.583406, 1)
metadata/_custom_type_script = "uid://4qs6esm05pc2"

[node name="Player4" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0xm2m")
color = Color(0.991606, 1, 0.496144, 1)
metadata/_custom_type_script = "uid://4qs6esm05pc2"

[node name="Game" parent="." instance=ExtResource("3_h2yge")]
unique_name_in_owner = true
layout_mode = 2
border_size = 6

[node name="ScoreMarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="ScoreAlignment" type="VBoxContainer" parent="ScoreMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="ScoreMarginContainer/ScoreAlignment"]
layout_mode = 2

[node name="TimePanel" type="PanelContainer" parent="ScoreMarginContainer/ScoreAlignment/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = ExtResource("4_1bvp3")

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreMarginContainer/ScoreAlignment/CenterContainer/TimePanel"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="ScoreMarginContainer/ScoreAlignment/CenterContainer/TimePanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 300
text = "0:"
horizontal_alignment = 1

[node name="MillisecondsLabel" type="Label" parent="ScoreMarginContainer/ScoreAlignment/CenterContainer/TimePanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "00"
